tmux: update theme
Signed-off-by: Coelacanthus <CoelacanthusHex@gmail.com>

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -28,14 +28,14 @@ if-shell "(( $(tput colors) >= 256 ))" {
 }
 # 启用上划线和 RGB 支持
 if-shell "[[ $COLORTERM =~ (24bit|truecolor) ]]" {
-    set -ga terminal-features ',*:RGB:usstyle:overline'
+    set -ga terminal-features ',*:RGB:Tc:usstyle:overline'
 }
 
 # boost history
 set -g history-limit 50000
 
 ## update the TERM variable of terminal emulator when creating a new session or attaching a existing session
-set -g update-environment 'DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY TERM'
+set -g update-environment 'DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY TERM COLORTERM'
 
 # More friendly split pane
 bind-key h split-window -h
@@ -50,40 +50,7 @@ set -g pane-border-lines double
 set -g base-index 1
 setw -g pane-base-index 1
 
-# Theme
-set -g status-interval 1
-set -g status on
-set -g status-justify left
-set -g status-style bg=#3B4252,fg=white
-set -g pane-border-style bg=default,fg=brightblack
-set -g pane-active-border-style bg=default,fg=blue
-set -g display-panes-colour black
-set -g display-panes-active-colour brightblack
-setw -g clock-mode-colour cyan
-set -g message-style bg=brightblack,fg=cyan
-set -g message-command-style bg=brightblack,fg=cyan
-set -g @prefix_highlight_copy_mode_attr "fg=black,bg=brightcyan"
-set -g status-left "#{prefix_highlight} #[fg=black,bg=bold][#S] "
-set -g status-right "#{sysstat_cpu} | #{sysstat_mem} | #{sysstat_swap} | #{sysstat_loadavg} #[fg=white,bg=brightblack] %Y-%m-%d #[fg=white,bg=brightblack,nobold,noitalics,nounderscore]|#[fg=white,bg=brightblack] %H:%M #[fg=cyan,bg=brightblack,nobold,noitalics,nounderscore] #[fg=black,bg=cyan,nobold] #H "
-set -g window-status-format " #[fg=white,bg=brightblack]#I #[fg=white,bg=brightblack]#W #F"
-set -g window-status-current-format "#[fg=black,bg=blue] #I#[fg=black,bg=blue,nobold,noitalics,nounderscore] #[fg=black,bg=blue]#W #F"
-set -g window-status-separator " "
-set -g status-left-length 100
-set -g status-right-length 130
-
-# Prefix Highlight
-set -g @prefix_highlight_fg 'white' # default is 'colour231'
-set -g @prefix_highlight_bg 'blue'  # default is 'colour04'
-set -g @prefix_highlight_empty_has_affixes 'on'
-set -g @prefix_highlight_empty_prompt 'Tmux'
-set -g @prefix_highlight_output_prefix '< '
-set -g @prefix_highlight_output_suffix ' >'
-
-# sysstat
-set -g @sysstat_mem_size_unit "G"
-set -g @sysstat_mem_view_tmpl 'MEM: #[fg=#{mem.color}]#{mem.pused}#[default] @ #{mem.used}/#{mem.total}'
-set -g @sysstat_swap_view_tmpl 'SWAP: #[fg=#{swap.color}]#{swap.pused}#[default] @ #{swap.used}/#{swap.total}'
-set -g @sysstat_cpu_view_tmpl 'CPU: #[fg=#{cpu.color}]#{cpu.pused}#[default]'
+run -b ~/.config/tmux/theme.tmux
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
