tmux: fix terminal-overrides syntax
Signed-off-by: Coelacanthus <CoelacanthusHex@gmail.com>

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -26,9 +26,9 @@ bind r source-file ~/.config/tmux/tmux.conf \; display 'tmux.conf sourced'
 if-shell "(( $(tput colors) >= 256 ))" {
     set -g default-terminal tmux-256color
 }
-# 启用上划线和 RGB 支持
+# enable true color
 if-shell "[[ $COLORTERM =~ (24bit|truecolor) ]]" {
-    set -ga terminal-features ',*:RGB:Tc:usstyle:overline'
+    set -sa terminal-overrides '*:RGB:Tc'
 }
 
 # boost history
