--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -4,6 +4,7 @@ Host aur aur.archlinux.org
     IdentityFile ~/.ssh/aur
     Hostname aur.archlinux.org
     User aur
+    UserKnownHostsFile ~/.ssh/known_hosts.d/public
 
 Host github.com
     User git
@@ -13,6 +14,7 @@ Host github.com
     ProxyCommand nc -F -x localhost:1089 -X 5 %h %p
     # http proxy
     #ProxyCommand nc -F -x localhost:8889 -X connect %h %p
+    UserKnownHostsFile ~/.ssh/known_hosts.d/public
 
 Host gitlab.archlinux.org
     User git
@@ -23,6 +25,7 @@ Host gitlab.archlinux.org
     #ProxyCommand nc -F -x localhost:1089 -X 5 %h %p
     # http proxy
     #ProxyCommand nc -F -x localhost:8889 -X connect %h %p
+    UserKnownHostsFile ~/.ssh/known_hosts.d/public
 
 Host codereview.qt-project.org
     Port 29418
@@ -35,12 +38,14 @@ Host codereview.qt-project.org
     ProxyCommand nc -F -x localhost:1089 -X 5 %h %p
     # http proxy
     #ProxyCommand nc -F -x localhost:8889 -X connect %h %p
+    UserKnownHostsFile ~/.ssh/known_hosts.d/public
 
 Host archlinuxcn
     User coelacanthus
     Hostname build.archlinuxcn.org
     IdentityFile ~/.ssh/06F96A0FB5AD258D.pub
     ProxyJump beryllium.coelacanthus.moe
+    UserKnownHostsFile ~/.ssh/known_hosts.d/public
 
 Match all
     ControlMaster auto
