ssh: add gitlab.com
Signed-off-by: Coelacanthus <CoelacanthusHex@gmail.com>

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -16,6 +16,15 @@ Host github.com
     #ProxyCommand nc -F -x localhost:8889 -X connect %h %p
     UserKnownHostsFile ~/.ssh/known_hosts.d/public
 
+Host gitlab.com
+    IdentityFile ~/.ssh/06F96A0FB5AD258D.pub
+    ProxyUseFdpass yes
+    # socks5 proxy
+    ProxyCommand nc -F -x localhost:1089 -X 5 %h %p
+    # http proxy
+    #ProxyCommand nc -F -x localhost:8889 -X connect %h %p
+    UserKnownHostsFile ~/.ssh/known_hosts.d/public
+
 Host gitlab.archlinux.org
     User git
     Port 222
