fontconfig: add replacement for MS ja and ko fonts
Signed-off-by: Coelacanthus <CoelacanthusHex@gmail.com>

--- a/fontconfig/.config/fontconfig/conf.d/51-replace-zh-cn.conf
+++ b/fontconfig/.config/fontconfig/conf.d/51-replace-zh-cn.conf
@@ -5,53 +5,13 @@
 <fontconfig>
   <description>使用思源字体取代一些我不想使用的字体。</description>
 
+  <!-- zh-Hans-CN {{{ -->
   <!-- 无衬线字体 -->
-  <!-- 西文字体 {{{ -->
-  <match target="pattern">
-    <test name="family">
-      <string>Arial</string>
-    </test>
-    <edit name="family" binding="same">
-      <string>Andika</string>
-      <string>Roboto</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test name="family">
-      <string>Helvetica</string>
-    </test>
-    <edit name="family" binding="same">
-      <string>Andika</string>
-      <string>Roboto</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test name="family">
-      <string>Segoe UI</string>
-    </test>
-    <edit name="family" binding="same">
-      <string>Andika</string>
-      <string>Roboto</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test name="family">
-      <string>Liberation</string>
-    </test>
-    <edit name="family" binding="same">
-      <string>Andika</string>
-      <string>Roboto</string>
-    </edit>
-  </match>
-  <!-- }}} -->
   <!-- 微软雅黑 {{{ -->
   <!-- Web pages tend to use this font, but it displays badly. -->
   <match target="pattern">
     <test qual="any" name="family">
       <string>微软雅黑</string>
-    </test>
-    <test name="prgname" compare="eq">
-      <string>Firefox</string>
     </test>
     <edit name="family" mode="prepend" binding="strong">
       <string>Source Han Sans</string>
@@ -61,8 +21,13 @@
     <test qual="any" name="family">
       <string>Microsoft YaHei</string>
     </test>
-    <test name="prgname" compare="eq">
-      <string>Firefox</string>
+    <edit name="family" mode="prepend" binding="strong">
+      <string>Source Han Sans</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test qual="any" name="family">
+      <string>Microsoft YaHei UI</string>
     </test>
     <edit name="family" mode="prepend" binding="strong">
       <string>Source Han Sans</string>
@@ -95,20 +60,20 @@
     </edit>
   </match>
   <!-- }}} -->
-  <!-- 微软正黑体 {{{ -->
+  <!-- 等线 {{{ -->
   <match target="pattern">
-    <test qual="any" name="family">
-      <string>微软正黑体</string>
+    <test name="family">
+      <string>Dengxian</string>
     </test>
-    <edit name="family" mode="assign" binding="same">
+    <edit name="family" binding="same">
       <string>Source Han Sans</string>
     </edit>
   </match>
   <match target="pattern">
-    <test qual="any" name="family">
-      <string>Microsoft JhengHei</string>
+    <test name="family">
+      <string>等线</string>
     </test>
-    <edit name="family" mode="assign" binding="same">
+    <edit name="family" binding="same">
       <string>Source Han Sans</string>
     </edit>
   </match>
@@ -156,6 +121,16 @@
   </match>
   <!-- }}} -->
   <!-- 楷体 {{{ -->
+  <match target="pattern">
+    <test qual="any" name="family">
+      <string>SimKai</string>
+    </test>
+    <edit name="family" mode="assign" binding="same">
+      <string>方正萤雪简体</string>
+      <string>方正萤雪繁体</string>
+      <string>方正新楷体_GBK</string>
+    </edit>
+  </match>
   <match target="pattern">
     <test qual="any" name="family">
       <string>楷体</string>
@@ -334,48 +309,6 @@
     </edit>
   </match>
   <!-- }}} -->
-  <!-- 细明体 {{{ -->
-  <match target="pattern">
-    <test name="family">
-      <string>新細明體</string>
-    </test>
-    <edit binding="strong" mode="prepend" name="family">
-      <string>Source Han Serif</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test name="family">
-      <string>細明體</string>
-    </test>
-    <edit binding="strong" mode="prepend" name="family">
-      <string>Source Han Serif</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test name="family">
-      <string>PMingLiU</string>
-    </test>
-    <edit binding="strong" mode="prepend" name="family">
-      <string>Source Han Serif</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test name="family">
-      <string>MingLiU</string>
-    </test>
-    <edit binding="strong" mode="prepend" name="family">
-      <string>Source Han Serif</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test name="family">
-      <string>细明体-ExtB</string>
-    </test>
-    <edit binding="strong" mode="prepend" name="family">
-      <string>Source Han Serif</string>
-    </edit>
-  </match>
-  <!-- }}} -->
   <!-- 文泉驿宋体 {{{ -->
   <match target="pattern">
     <test name="family">
@@ -386,69 +319,6 @@
     </edit>
   </match>
   <!-- }}} -->
-  <!-- 等宽字体 -->
-  <match target="pattern">
-    <test name="family">
-      <string>Consolas</string>
-    </test>
-    <edit name="family" binding="same">
-      <string>Iosevka</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test name="family">
-      <string>Liberation Mono</string>
-    </test>
-    <edit name="family" binding="same">
-      <string>Iosevka</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test name="family">
-      <string>Inconsolata</string>
-    </test>
-    <edit name="family" binding="same">
-      <string>Iosevka</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test name="family" compare="contains">
-      <string>Courier</string>
-    </test>
-    <edit name="family" binding="same">
-      <string>Iosevka</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test name="family" compare="contains">
-      <string>courier</string>
-    </test>
-    <edit name="family" binding="same">
-      <string>Iosevka</string>
-    </edit>
-  </match>
-  <!-- Emoji -->
-  <!-- Apple Color Emoji {{{ -->
-  <match target="pattern">
-    <test name="family" qual="any">
-      <string>Apple Color Emoji</string>
-    </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>Twemoji</string>
-      <string>Twemoji Mozilla</string>
-    </edit>
-  </match>
-  <!-- }}} -->
-  <!-- Noto Color Emoji {{{ -->
-  <match target="pattern">
-    <test name="family" qual="any">
-      <string>Noto Color Emoji</string>
-    </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>Twemoji</string>
-      <string>Twemoji Mozilla</string>
-    </edit>
-  </match>
   <!-- }}} -->
 </fontconfig>
 <!-- vim: set fdm=marker nu sts=2 sw=2 et: -->
