fontconfig(mpv): use FangZheng YouSong

--- a/fontconfig/.config/fontconfig/conf.d/53-mpv-font.conf
+++ b/fontconfig/.config/fontconfig/conf.d/53-mpv-font.conf
@@ -11,7 +11,7 @@
       <string>Andika</string>
     </test>
     <edit binding="strong" mode="prepend" name="family">
-      <string>Andika</string>
+      <!--string>Andika</string-->
       <string>方正悠宋 GBK 509R</string>
       <string>LXGW WenKai</string>
       <string>Source Han Sans</string>
