--- a/fontconfig/.config/fontconfig/conf.d/53-replace-noto-cjk-with-source-han.conf
+++ b/fontconfig/.config/fontconfig/conf.d/53-replace-noto-cjk-with-source-han.conf
@@ -26,6 +26,29 @@
       <string>Source Han Serif SC</string>
     </edit>
   </match>
+  <!-- Hack for website with fucking EN-* but contain CJK char -->
+  <match target="pattern">
+    <test name="lang" compare="contains">
+      <string>EN</string>
+    </test>
+    <test qual="any" name="family">
+      <string>Source Han Sans</string>
+    </test>
+    <edit name="family" mode="assign" binding="same">
+      <string>Source Han Sans SC</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="lang" compare="contains">
+      <string>EN</string>
+    </test>
+    <test qual="any" name="family">
+      <string>Source Han Serif</string>
+    </test>
+    <edit name="family" mode="assign" binding="same">
+      <string>Source Han Serif SC</string>
+    </edit>
+  </match>
 
   <match target="pattern">
     <test qual="any" name="family">
