sysctl(perf): use bbrv3 as TCP Congestion Control algo

--- a/sysctl/99-perf.conf
+++ b/sysctl/99-perf.conf
@@ -56,7 +56,10 @@ net.core.default_qdisc = cake
 # https://dropbox.tech/infrastructure/evaluating-bbrv2-on-the-dropbox-edge-network
 # https://blog.csdn.net/dog250/article/details/120336563
 # https://blog.csdn.net/dog250/article/details/113803334
-net.ipv4.tcp_congestion_control = bbr2
+# NOTE: linux-zen use BBRv3 for tcp_bbr.ko since 6.5
+# https://github.com/zen-kernel/zen-kernel/commit/bcb27e4adacda606c76349bfba3305db6ea83887
+# https://github.com/zen-kernel/zen-kernel/issues/324
+net.ipv4.tcp_congestion_control = bbr
 
 # increase system IP port limits
 # This is not a fundamental solution, but it can alleviate the problem that the
