--- a/fontconfig/.config/fontconfig/conf.d/53-replace-noto-cjk-with-source-han.conf
+++ b/fontconfig/.config/fontconfig/conf.d/53-replace-noto-cjk-with-source-han.conf
@@ -50,6 +50,142 @@
     </edit>
   </match>
 
+  <!-- Workaround for Source Han Sans/Serif has no support for zh-Hans/Hant -->
+  <match target="pattern">
+    <test name="lang" compare="contains">
+      <string>zh-Hans</string>
+    </test>
+    <test qual="any" name="family">
+      <string>Source Han Sans</string>
+    </test>
+    <edit name="family" mode="assign" binding="same">
+      <string>Source Han Sans SC</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="lang" compare="contains">
+      <string>zh-Hans</string>
+    </test>
+    <test qual="any" name="family">
+      <string>Source Han Serif</string>
+    </test>
+    <edit name="family" mode="assign" binding="same">
+      <string>Source Han Serif SC</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="lang">
+      <string>zh-Hant-TW</string>
+    </test>
+    <test qual="any" name="family">
+      <string>Source Han Sans</string>
+    </test>
+    <edit name="family" mode="assign" binding="same">
+      <string>Source Han Sans TC</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="lang">
+      <string>zh-Hant-TW</string>
+    </test>
+    <test qual="any" name="family">
+      <string>Source Han Serif</string>
+    </test>
+    <edit name="family" mode="assign" binding="same">
+      <string>Source Han Serif TC</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="lang">
+      <string>zh-Hant-HK</string>
+    </test>
+    <test qual="any" name="family">
+      <string>Source Han Sans</string>
+    </test>
+    <edit name="family" mode="assign" binding="same">
+      <string>Source Han Sans HC</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="lang">
+      <string>zh-Hant-HK</string>
+    </test>
+    <test qual="any" name="family">
+      <string>Source Han Serif</string>
+    </test>
+    <edit name="family" mode="assign" binding="same">
+      <string>Source Han Serif HC</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="lang">
+      <string>zh-Hant-MO</string>
+    </test>
+    <test qual="any" name="family">
+      <string>Source Han Sans</string>
+    </test>
+    <edit name="family" mode="assign" binding="same">
+      <string>Source Han Sans HC</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="lang">
+      <string>zh-Hant-MO</string>
+    </test>
+    <test qual="any" name="family">
+      <string>Source Han Serif</string>
+    </test>
+    <edit name="family" mode="assign" binding="same">
+      <string>Source Han Serif HC</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="lang">
+      <string>zh-Hant</string>
+    </test>
+    <test qual="any" name="family">
+      <string>Source Han Sans</string>
+    </test>
+    <edit name="family" mode="assign" binding="same">
+      <string>Source Han Sans TC</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="lang">
+      <string>zh-Hant</string>
+    </test>
+    <test qual="any" name="family">
+      <string>Source Han Serif</string>
+    </test>
+    <edit name="family" mode="assign" binding="same">
+      <string>Source Han Serif TC</string>
+    </edit>
+  </match>
+
+  <!-- Workaround for Source Han Sans/Serif has no support for zh-MO -->
+  <match target="pattern">
+    <test name="lang">
+      <string>zh-MO</string>
+    </test>
+    <test qual="any" name="family">
+      <string>Source Han Sans</string>
+    </test>
+    <edit name="family" mode="assign" binding="same">
+      <string>Source Han Sans HC</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="lang" compare="contains">
+      <string>zh-MO</string>
+    </test>
+    <test qual="any" name="family">
+      <string>Source Han Serif</string>
+    </test>
+    <edit name="family" mode="assign" binding="same">
+      <string>Source Han Serif HC</string>
+    </edit>
+  </match>
+
   <match target="pattern">
     <test qual="any" name="family">
       <string>Noto Sans CJK SC</string>
