fontconfig: add hack for fucking lang=default
There are too many self-righteous people in this world who think they are
the creators of BCP47[1]. Some of them invented `lang=cn` (@MoodyHunter),
and some invented `lang=default` (@icpz).

[1]: https://www.ietf.org/rfc/bcp/bcp47.txt

--- a/fontconfig/.config/fontconfig/conf.d/53-replace-noto-cjk-with-source-han.conf
+++ b/fontconfig/.config/fontconfig/conf.d/53-replace-noto-cjk-with-source-han.conf
@@ -50,6 +50,30 @@
     </edit>
   </match>
 
+  <!-- Hack for website with fucking default -->
+  <match target="pattern">
+    <test name="lang" compare="contains">
+      <string>default</string>
+    </test>
+    <test qual="any" name="family">
+      <string>Source Han Sans</string>
+    </test>
+    <edit name="family" mode="assign" binding="same">
+      <string>Source Han Sans SC</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="lang" compare="contains">
+      <string>default</string>
+    </test>
+    <test qual="any" name="family">
+      <string>Source Han Serif</string>
+    </test>
+    <edit name="family" mode="assign" binding="same">
+      <string>Source Han Serif SC</string>
+    </edit>
+  </match>
+
   <!-- Workaround for Source Han Sans/Serif has no support for zh-Hans/Hant -->
   <match target="pattern">
     <test name="lang" compare="contains">
