fontconfig: remove compare="contains" because i-default is valid
Fixes: 60e29d8f115b10677bdfb9ced76d39034b25ad57

--- a/fontconfig/.config/fontconfig/conf.d/53-replace-noto-cjk-with-source-han.conf
+++ b/fontconfig/.config/fontconfig/conf.d/53-replace-noto-cjk-with-source-han.conf
@@ -52,7 +52,7 @@
 
   <!-- Hack for website with fucking default -->
   <match target="pattern">
-    <test name="lang" compare="contains">
+    <test name="lang">
       <string>default</string>
     </test>
     <test qual="any" name="family">
@@ -63,7 +63,7 @@
     </edit>
   </match>
   <match target="pattern">
-    <test name="lang" compare="contains">
+    <test name="lang">
       <string>default</string>
     </test>
     <test qual="any" name="family">
