ssh: trust SSHFP record

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -64,6 +64,10 @@ Match all
     ServerAliveInterval 120
     # Enable compression to optimize in bad network environment
     Compression yes
+    # Trust SSHFP DNS record
+    VerifyHostKeyDNS yes
+    # I will only trust server that I verify manually or via SSHFP+DNSSEC
+    StrictHostKeyChecking yes
     # https://infosec.mozilla.org/guidelines/openssh.html#modern
     # https://www.ssh-audit.com/hardening_guides.html
     # Ensure KnownHosts are unreadable if leaked - it is otherwise easier to know which hosts your keys have access to.
