--- a/fontconfig/.config/fontconfig/conf.d/53-replace-noto-cjk-with-source-han.conf
+++ b/fontconfig/.config/fontconfig/conf.d/53-replace-noto-cjk-with-source-han.conf
@@ -186,6 +186,74 @@
     </edit>
   </match>
 
+  <!-- Workaround for Source Han Sans/Serif has no support for zh-cmn -->
+  <match target="pattern">
+    <test name="lang" compare="contains">
+      <string>zh-cmn-Hans</string>
+    </test>
+    <test qual="any" name="family">
+      <string>Source Han Sans</string>
+    </test>
+    <edit name="family" mode="assign" binding="same">
+      <string>Source Han Sans SC</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="lang" compare="contains">
+      <string>zh-cmn-Hans</string>
+    </test>
+    <test qual="any" name="family">
+      <string>Source Han Serif</string>
+    </test>
+    <edit name="family" mode="assign" binding="same">
+      <string>Source Han Serif SC</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="lang" compare="contains">
+      <string>zh-cmn-Hant</string>
+    </test>
+    <test qual="any" name="family">
+      <string>Source Han Sans</string>
+    </test>
+    <edit name="family" mode="assign" binding="same">
+      <string>Source Han Sans TC</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="lang" compare="contains">
+      <string>zh-cmn-Hant</string>
+    </test>
+    <test qual="any" name="family">
+      <string>Source Han Serif</string>
+    </test>
+    <edit name="family" mode="assign" binding="same">
+      <string>Source Han Serif TC</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="lang">
+      <string>zh-cmn</string>
+    </test>
+    <test qual="any" name="family">
+      <string>Source Han Sans</string>
+    </test>
+    <edit name="family" mode="assign" binding="same">
+      <string>Source Han Sans SC</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="lang">
+      <string>zh-cmn</string>
+    </test>
+    <test qual="any" name="family">
+      <string>Source Han Serif</string>
+    </test>
+    <edit name="family" mode="assign" binding="same">
+      <string>Source Han Serif SC</string>
+    </edit>
+  </match>
+
   <!-- Workaround for Source Han Sans/Serif has no support for zh-MO -->
   <match target="pattern">
     <test name="lang">
