fontconfig: change latin serif font to Noto Serif

--- a/fontconfig/.config/fontconfig/conf.d/50-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/50-generic.conf
@@ -9,7 +9,6 @@
     </test>
     <edit binding="strong" mode="prepend" name="family">
       <string>Andika</string>
-      <string>Roboto</string>
       <string>Source Han Sans</string>
       <!-- 补全生僻字 -->
       <string>Plangothic P1</string>
@@ -29,7 +28,7 @@
       <string>serif</string>
     </test>
     <edit binding="strong" mode="prepend" name="family">
-      <string>Roboto Slab</string>
+      <string>Noto Serif</string>
       <string>Source Han Serif</string>
       <!-- 补全生僻字 -->
       <string>NazonoMincho</string>
