--- a/sysctl/99-harden.conf
+++ b/sysctl/99-harden.conf
@@ -233,13 +233,13 @@ net.ipv6.conf.default.use_tempaddr = 2
 net.ipv6.conf.all.use_tempaddr = 2
 
 # ignore IPv6 ICMP redirect messages
-net.ipv6.conf.default.accept_redirects = 0
-net.ipv6.conf.all.accept_redirects = 0
+#net.ipv6.conf.default.accept_redirects = 0
+#net.ipv6.conf.all.accept_redirects = 0
 
 # accept packets with SRR option
 # for route
-net.ipv6.conf.default.accept_source_route = 1
-net.ipv6.conf.all.accept_source_route = 1
+#net.ipv6.conf.default.accept_source_route = 1
+#net.ipv6.conf.all.accept_source_route = 1
 
 # ignore all ICMPv6 echo requests
 #net.ipv6.icmp.echo_ignore_all = 1
