ssh: use 443 port for github

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -8,6 +8,8 @@ Host aur aur.archlinux.org
 
 Host github.com
     User git
+    Hostname ssh.github.com
+    Port 443
     IdentityFile ~/.ssh/06F96A0FB5AD258D.pub
     ProxyUseFdpass yes
     # socks5 proxy
