fontconfig: use Zhudou Sans as Chinese punctuation font
- Use a AndikaQuote font (only with quote mark) to make quote mark
  half-width.
- Restructure replace fonts to make punctuation font work.
- Disable Zhudou Sans for telegram becuase of double line height.

Signed-off-by: Coelacanthus <CoelacanthusHex@gmail.com>

--- a/fontconfig/.config/fontconfig/conf.d/50-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/50-generic.conf
@@ -8,6 +8,12 @@
       <string>sans-serif</string>
     </test>
     <edit binding="strong" mode="prepend" name="family">
+      <!--
+        Hack for some applications don't support font feature,
+        so I can't use pwid feature of Zhudou Sans to get half-width quotation marks.
+      -->
+      <string>AndikaQuote</string>
+      <string>Zhudou Sans</string>
       <string>Andika</string>
       <string>Source Han Sans</string>
       <!-- 补全生僻字 -->
