--- a/fontconfig/.config/fontconfig/conf.d/47-font-features.conf
+++ b/fontconfig/.config/fontconfig/conf.d/47-font-features.conf
@@ -97,6 +97,10 @@
     </test>
     <edit name="fontfeatures" mode="append">
       <string>chws on</string> <!-- 标点挤压 -->
+      <string>kern on</string> <!-- 标点挤压 -->
+      <string>vkrn on</string> <!-- 标点挤压 -->
+      <string>ccmp on</string> <!-- 破折号连字 -->
+      <string>dlig on</string> <!-- 感叹号和问号连字 -->
     </edit>
   </match>
 </fontconfig>
