fontconfig: replace Liberation and Nimbus series fonts
- replace Noto Sans for consistence

Signed-off-by: Coelacanthus <CoelacanthusHex@gmail.com>

--- a/fontconfig/.config/fontconfig/conf.d/51-replace-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/51-replace-latin.conf
@@ -4,36 +4,57 @@
 <!-- Configs based on https://github.com/rydesun/dotfiles/blob/master/.config/fontconfig/conf.d/52-replace.conf -->
 <fontconfig>
   <description>取代一些我不想使用的西文字体。</description>
-
+  
+  <!-- For consistence -->
   <match target="pattern">
     <test name="family">
+      <string>Noto Sans</string>
+    </test>
+    <edit name="family" binding="same">
+      <string>AndikaQuote</string>
+      <string>Zhudou Sans</string>
+      <string>Andika</string>
+    </edit>
+  </match>
+
+  <!-- Replace Web Safe Fonts and PDF Safe Fonts -->
+  <match target="pattern">
+    <test name="family" compare="contains">
+      <string>Liberation Sans</string>
+    </test>
+    <edit name="family" binding="same">
+      <string>AndikaQuote</string>
+      <string>Zhudou Sans</string>
+      <string>Andika</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="family" compare="contains">
+      <string>Nimbus Sans</string>
+    </test>
+    <edit name="family" binding="same">
+      <string>AndikaQuote</string>
+      <string>Zhudou Sans</string>
+      <string>Andika</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="family" compare="contains">
       <string>Arial</string>
     </test>
     <edit name="family" binding="same">
+      <string>AndikaQuote</string>
+      <string>Zhudou Sans</string>
       <string>Andika</string>
     </edit>
   </match>
   <match target="pattern">
-    <test name="family">
+    <test name="family" compare="contains">
       <string>Helvetica</string>
     </test>
     <edit name="family" binding="same">
-      <string>Andika</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test name="family">
-      <string>Segoe UI</string>
-    </test>
-    <edit name="family" binding="same">
-      <string>Andika</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test name="family">
-      <string>Liberation</string>
-    </test>
-    <edit name="family" binding="same">
+      <string>AndikaQuote</string>
+      <string>Zhudou Sans</string>
       <string>Andika</string>
     </edit>
   </match>
