--- a/fontconfig/.config/fontconfig/conf.d/51-replace-monospace.conf
+++ b/fontconfig/.config/fontconfig/conf.d/51-replace-monospace.conf
@@ -3,7 +3,7 @@
 <!-- Configs based on https://github.com/rocka/dotFiles/blob/master/.config/fontconfig/conf.d/10-replace.conf -->
 <!-- Configs based on https://github.com/rydesun/dotfiles/blob/master/.config/fontconfig/conf.d/52-replace.conf -->
 <fontconfig>
-  <description>取代一些我不想使用的西文字体。</description>
+  <description>取代一些我不想使用的等宽字体。</description>
 
   <match target="pattern">
     <test name="family">
@@ -14,8 +14,16 @@
     </edit>
   </match>
   <match target="pattern">
-    <test name="family">
+    <test name="family" compare="contains">
       <string>Liberation Mono</string>
+    </test>
+    <edit name="family" binding="same">
+      <string>Iosevka</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="family" compare="contains">
+      <string>Nimbus Mono</string>
     </test>
     <edit name="family" binding="same">
       <string>Iosevka</string>
