fontconfig: replace latin font for KaiTi and Fangsong
because these fonts has terrible latin font.

Signed-off-by: Coelacanthus <CoelacanthusHex@gmail.com>

--- a/fontconfig/.config/fontconfig/conf.d/51-replace-zh-tw-others.conf
+++ b/fontconfig/.config/fontconfig/conf.d/51-replace-zh-tw-others.conf
@@ -10,6 +10,9 @@
       <string>标楷体</string>
     </test>
     <edit name="family" mode="assign" binding="same">
+      <string>AndikaQuote</string>
+      <string>Zhudou Sans</string>
+      <string>Andika</string>
       <string>方正萤雪繁体</string>
       <string>方正萤雪简体</string>
       <string>方正新楷体_GBK</string>
@@ -20,6 +23,9 @@
       <string>DFKai-SB</string>
     </test>
     <edit name="family" mode="assign" binding="same">
+      <string>AndikaQuote</string>
+      <string>Zhudou Sans</string>
+      <string>Andika</string>
       <string>方正萤雪繁体</string>
       <string>方正萤雪简体</string>
       <string>方正新楷体_GBK</string>
