--- a/fontconfig/.config/fontconfig/conf.d/51-replace-zh-cn-others.conf
+++ b/fontconfig/.config/fontconfig/conf.d/51-replace-zh-cn-others.conf
@@ -10,6 +10,9 @@
       <string>SimKai</string>
     </test>
     <edit name="family" mode="assign" binding="same">
+      <string>AndikaQuote</string>
+      <string>Zhudou Sans</string>
+      <string>Andika</string>
       <string>方正萤雪简体</string>
       <string>方正萤雪繁体</string>
       <string>方正新楷体_GBK</string>
@@ -20,6 +23,9 @@
       <string>楷体</string>
     </test>
     <edit name="family" mode="assign" binding="same">
+      <string>AndikaQuote</string>
+      <string>Zhudou Sans</string>
+      <string>Andika</string>
       <string>方正萤雪简体</string>
       <string>方正萤雪繁体</string>
       <string>方正新楷体_GBK</string>
@@ -30,6 +36,9 @@
       <string>KaiTi</string>
     </test>
     <edit name="family" mode="assign" binding="same">
+      <string>AndikaQuote</string>
+      <string>Zhudou Sans</string>
+      <string>Andika</string>
       <string>方正萤雪简体</string>
       <string>方正萤雪繁体</string>
       <string>方正新楷体_GBK</string>
@@ -40,6 +49,9 @@
       <string>楷体_GB2312</string>
     </test>
     <edit name="family" mode="assign" binding="same">
+      <string>AndikaQuote</string>
+      <string>Zhudou Sans</string>
+      <string>Andika</string>
       <string>方正萤雪简体</string>
       <string>方正萤雪繁体</string>
       <string>方正新楷体_GBK</string>
@@ -50,6 +62,9 @@
       <string>KaiTi_GB2312</string>
     </test>
     <edit name="family" mode="assign" binding="same">
+      <string>AndikaQuote</string>
+      <string>Zhudou Sans</string>
+      <string>Andika</string>
       <string>方正萤雪简体</string>
       <string>方正萤雪繁体</string>
       <string>方正新楷体_GBK</string>
@@ -60,6 +75,9 @@
       <string>标楷体</string>
     </test>
     <edit name="family" mode="assign" binding="same">
+      <string>AndikaQuote</string>
+      <string>Zhudou Sans</string>
+      <string>Andika</string>
       <string>方正萤雪繁体</string>
       <string>方正萤雪简体</string>
       <string>方正新楷体_GBK</string>
@@ -70,6 +88,9 @@
       <string>DFKai-SB</string>
     </test>
     <edit name="family" mode="assign" binding="same">
+      <string>AndikaQuote</string>
+      <string>Zhudou Sans</string>
+      <string>Andika</string>
       <string>方正萤雪繁体</string>
       <string>方正萤雪简体</string>
       <string>方正新楷体_GBK</string>
@@ -82,6 +103,9 @@
       <string>仿宋</string>
     </test>
     <edit name="family" mode="assign" binding="same">
+      <string>AndikaQuote</string>
+      <string>Zhudou Sans</string>
+      <string>Andika</string>
       <string>方正刻本仿宋简体</string>
       <string>方正仿宋_GBK</string>
     </edit>
@@ -91,6 +115,9 @@
       <string>仿宋_GB2312</string>
     </test>
     <edit name="family" mode="assign" binding="same">
+      <string>AndikaQuote</string>
+      <string>Zhudou Sans</string>
+      <string>Andika</string>
       <string>方正刻本仿宋简体</string>
       <string>方正仿宋_GBK</string>
     </edit>
@@ -100,6 +127,9 @@
       <string>FangSong</string>
     </test>
     <edit name="family" mode="assign" binding="same">
+      <string>AndikaQuote</string>
+      <string>Zhudou Sans</string>
+      <string>Andika</string>
       <string>方正刻本仿宋简体</string>
       <string>方正仿宋_GBK</string>
     </edit>
@@ -109,6 +139,9 @@
       <string>FangSong_GB2312</string>
     </test>
     <edit name="family" mode="assign" binding="same">
+      <string>AndikaQuote</string>
+      <string>Zhudou Sans</string>
+      <string>Andika</string>
       <string>方正刻本仿宋简体</string>
       <string>方正仿宋_GBK</string>
     </edit>
