fontconfig: use Term variant for Iosevka to get correct width for arrows
Signed-off-by: Coelacanthus <CoelacanthusHex@gmail.com>

--- a/fontconfig/.config/fontconfig/conf.d/50-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/50-generic.conf
@@ -53,9 +53,7 @@
       <string>monospace</string>
     </test>
     <edit binding="strong" mode="prepend" name="family">
-      <!-- We don't replace it with Iosevka because Firefox and Qt don't support OpenType feature, so I can't use ss10 variant -->
-      <string>Iosevka SS10</string>
-      <string>Iosevka</string>
+      <string>Iosevka Term</string>
       <string>Maple Mono</string>
       <string>Fira Code</string>
       <string>Source Han Sans</string>
