--- a/fontconfig/.config/fontconfig/conf.d/51-replace-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/51-replace-latin.conf
@@ -58,6 +58,18 @@
       <string>Andika</string>
     </edit>
   </match>
+
+  <!-- GNOME Dev like it, but I don't. -->
+  <match target="pattern">
+    <test name="family">
+      <string>Cantarell</string>
+    </test>
+    <edit name="family" binding="same">
+      <string>AndikaQuote</string>
+      <string>Zhudou Sans</string>
+      <string>Andika</string>
+    </edit>
+  </match>
 </fontconfig>
 <!-- vim: set fdm=marker nu sts=2 sw=2 et: -->
 <!-- kate: space-indent on; indent-width 2; -->
