--- a/fontconfig/.config/fontconfig/conf.d/51-replace-monospace.conf
+++ b/fontconfig/.config/fontconfig/conf.d/51-replace-monospace.conf
@@ -53,6 +53,14 @@
       <string>Iosevka</string>
     </edit>
   </match>
+  <match target="pattern">
+    <test name="family" compare="contains">
+      <string>Source Code Pro</string>
+    </test>
+    <edit name="family" binding="same">
+      <string>Iosevka</string>
+    </edit>
+    </match>
 </fontconfig>
 <!-- vim: set fdm=marker nu sts=2 sw=2 et: -->
 <!-- kate: space-indent on; indent-width 2; -->
