fontconfig: use default SC varinat to simplify config
Use SC variant as default so I can remove all rules to make en-*
zh-Hans-* zh-cmn-* and other lang attributes which need use SC variant
work. I only need rules to make zh-Hant-* work.

Signed-off-by: Coelacanthus <CoelacanthusHex@gmail.com>

--- a/fontconfig/.config/fontconfig/conf.d/50-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/50-generic.conf
@@ -9,7 +9,8 @@
     </test>
     <edit binding="strong" mode="prepend" name="family">
       <string>Andika</string>
-      <string>Source Han Sans</string>
+      <!-- Use SC variant to use it with unknown lang like en-* zh-Hans-* and zh-cmn -->
+      <string>Source Han Sans SC</string>
       <!-- 补全生僻字 -->
       <string>Plangothic P1</string>
       <string>Plangothic P2</string>
@@ -29,7 +30,8 @@
     </test>
     <edit binding="strong" mode="prepend" name="family">
       <string>Noto Serif</string>
-      <string>Source Han Serif</string>
+      <!-- Use SC variant to use it with unknown lang like en-* zh-Hans-* and zh-cmn -->
+      <string>Source Han Serif SC</string>
       <!-- 补全生僻字 -->
       <string>NazonoMincho</string>
       <string>NazonoMincho+</string>
@@ -50,7 +52,8 @@
       <string>Iosevka Term</string>
       <string>Maple Mono</string>
       <string>Fira Code</string>
-      <string>Source Han Sans</string>
+      <!-- Use SC variant to use it with unknown lang like en-* zh-Hans-* and zh-cmn -->
+      <string>Source Han Sans SC</string>
       <!-- 补全生僻字 -->
       <string>Plangothic P1</string>
       <string>Plangothic P2</string>
