--- a/fontconfig/.config/fontconfig/conf.d/54-source-han-lang-attr-fix.conf
+++ b/fontconfig/.config/fontconfig/conf.d/54-source-han-lang-attr-fix.conf
@@ -3,106 +3,13 @@
 <fontconfig>
   <description>修复思源字体不支持部分 lang attribute 的问题</description>
 
-  <!-- Hack for website with en-* but contain CJK char -->
-  <match target="pattern">
-    <test name="lang" compare="contains">
-      <string>en</string>
-    </test>
-    <test qual="any" name="family">
-      <string>Source Han Sans</string>
-    </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>Source Han Sans SC</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test name="lang" compare="contains">
-      <string>en</string>
-    </test>
-    <test qual="any" name="family">
-      <string>Source Han Serif</string>
-    </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>Source Han Serif SC</string>
-    </edit>
-  </match>
-  <!-- Hack for website with fucking EN-* but contain CJK char -->
-  <match target="pattern">
-    <test name="lang" compare="contains">
-      <string>EN</string>
-    </test>
-    <test qual="any" name="family">
-      <string>Source Han Sans</string>
-    </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>Source Han Sans SC</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test name="lang" compare="contains">
-      <string>EN</string>
-    </test>
-    <test qual="any" name="family">
-      <string>Source Han Serif</string>
-    </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>Source Han Serif SC</string>
-    </edit>
-  </match>
-
-  <!-- Hack for website with fucking default -->
-  <match target="pattern">
-    <test name="lang">
-      <string>default</string>
-    </test>
-    <test qual="any" name="family">
-      <string>Source Han Sans</string>
-    </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>Source Han Sans SC</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test name="lang">
-      <string>default</string>
-    </test>
-    <test qual="any" name="family">
-      <string>Source Han Serif</string>
-    </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>Source Han Serif SC</string>
-    </edit>
-  </match>
-
-  <!-- Workaround for Source Han Sans/Serif has no support for zh-Hans/Hant -->
-  <match target="pattern">
-    <test name="lang" compare="contains">
-      <string>zh-Hans</string>
-    </test>
-    <test qual="any" name="family">
-      <string>Source Han Sans</string>
-    </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>Source Han Sans SC</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test name="lang" compare="contains">
-      <string>zh-Hans</string>
-    </test>
-    <test qual="any" name="family">
-      <string>Source Han Serif</string>
-    </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>Source Han Serif SC</string>
-    </edit>
-  </match>
+  <!-- Workaround for Source Han Sans/Serif has no support for zh-Hant -->
   <match target="pattern">
     <test name="lang">
       <string>zh-Hant-TW</string>
     </test>
     <test qual="any" name="family">
-      <string>Source Han Sans</string>
+      <string>Source Han Sans SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
       <string>Source Han Sans TC</string>
@@ -113,7 +20,7 @@
       <string>zh-Hant-TW</string>
     </test>
     <test qual="any" name="family">
-      <string>Source Han Serif</string>
+      <string>Source Han Serif SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
       <string>Source Han Serif TC</string>
@@ -124,7 +31,7 @@
       <string>zh-Hant-HK</string>
     </test>
     <test qual="any" name="family">
-      <string>Source Han Sans</string>
+      <string>Source Han Sans SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
       <string>Source Han Sans HC</string>
@@ -135,7 +42,7 @@
       <string>zh-Hant-HK</string>
     </test>
     <test qual="any" name="family">
-      <string>Source Han Serif</string>
+      <string>Source Han Serif SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
       <string>Source Han Serif HC</string>
@@ -146,7 +53,7 @@
       <string>zh-Hant-MO</string>
     </test>
     <test qual="any" name="family">
-      <string>Source Han Sans</string>
+      <string>Source Han Sans SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
       <string>Source Han Sans HC</string>
@@ -157,7 +64,7 @@
       <string>zh-Hant-MO</string>
     </test>
     <test qual="any" name="family">
-      <string>Source Han Serif</string>
+      <string>Source Han Serif SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
       <string>Source Han Serif HC</string>
@@ -168,7 +75,7 @@
       <string>zh-Hant</string>
     </test>
     <test qual="any" name="family">
-      <string>Source Han Sans</string>
+      <string>Source Han Sans SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
       <string>Source Han Sans TC</string>
@@ -179,7 +86,7 @@
       <string>zh-Hant</string>
     </test>
     <test qual="any" name="family">
-      <string>Source Han Serif</string>
+      <string>Source Han Serif SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
       <string>Source Han Serif TC</string>
@@ -189,32 +96,10 @@
   <!-- Workaround for Source Han Sans/Serif has no support for zh-cmn -->
   <match target="pattern">
     <test name="lang" compare="contains">
-      <string>zh-cmn-Hans</string>
-    </test>
-    <test qual="any" name="family">
-      <string>Source Han Sans</string>
-    </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>Source Han Sans SC</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test name="lang" compare="contains">
-      <string>zh-cmn-Hans</string>
-    </test>
-    <test qual="any" name="family">
-      <string>Source Han Serif</string>
-    </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>Source Han Serif SC</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test name="lang" compare="contains">
       <string>zh-cmn-Hant</string>
     </test>
     <test qual="any" name="family">
-      <string>Source Han Sans</string>
+      <string>Source Han Sans SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
       <string>Source Han Sans TC</string>
@@ -225,32 +110,10 @@
       <string>zh-cmn-Hant</string>
     </test>
     <test qual="any" name="family">
-      <string>Source Han Serif</string>
+      <string>Source Han Serif SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
       <string>Source Han Serif TC</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test name="lang">
-      <string>zh-cmn</string>
-    </test>
-    <test qual="any" name="family">
-      <string>Source Han Sans</string>
-    </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>Source Han Sans SC</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test name="lang">
-      <string>zh-cmn</string>
-    </test>
-    <test qual="any" name="family">
-      <string>Source Han Serif</string>
-    </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>Source Han Serif SC</string>
     </edit>
   </match>
 
@@ -260,7 +123,7 @@
       <string>zh-MO</string>
     </test>
     <test qual="any" name="family">
-      <string>Source Han Sans</string>
+      <string>Source Han Sans SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
       <string>Source Han Sans HC</string>
@@ -271,7 +134,7 @@
       <string>zh-MO</string>
     </test>
     <test qual="any" name="family">
-      <string>Source Han Serif</string>
+      <string>Source Han Serif SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
       <string>Source Han Serif HC</string>
