--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -19,6 +19,9 @@ Host github.com
     UserKnownHostsFile ~/.ssh/known_hosts.d/public
 
 Host gitlab.com
+    User git
+    Hostname altssh.gitlab.com
+    Port 443
     IdentityFile ~/.ssh/06F96A0FB5AD258D.pub
     ProxyUseFdpass yes
     # socks5 proxy
