fontconfig: reorder config
Signed-off-by: Coelacanthus <CoelacanthusHex@gmail.com>

--- a/fontconfig/.config/fontconfig/conf.d/49-replace-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/49-replace-latin.conf
@@ -11,7 +11,7 @@
       <string>Noto Sans</string>
     </test>
     <edit name="family" binding="same">
-      <string>Andika</string>
+      <string>sans-serif</string>
     </edit>
   </match>
 
@@ -21,7 +21,7 @@
       <string>Liberation Sans</string>
     </test>
     <edit name="family" binding="same">
-      <string>Andika</string>
+      <string>sans-serif</string>
     </edit>
   </match>
   <match target="pattern">
@@ -29,7 +29,7 @@
       <string>Nimbus Sans</string>
     </test>
     <edit name="family" binding="same">
-      <string>Andika</string>
+      <string>sans-serif</string>
     </edit>
   </match>
   <match target="pattern">
@@ -37,7 +37,7 @@
       <string>Arial</string>
     </test>
     <edit name="family" binding="same">
-      <string>Andika</string>
+      <string>sans-serif</string>
     </edit>
   </match>
   <match target="pattern">
@@ -45,7 +45,7 @@
       <string>Helvetica</string>
     </test>
     <edit name="family" binding="same">
-      <string>Andika</string>
+      <string>sans-serif</string>
     </edit>
   </match>
 
@@ -55,7 +55,7 @@
       <string>Cantarell</string>
     </test>
     <edit name="family" binding="same">
-      <string>Andika</string>
+      <string>sans-serif</string>
     </edit>
   </match>
 </fontconfig>
