--- a/fontconfig/.config/fontconfig/conf.d/49-replace-monospace.conf
+++ b/fontconfig/.config/fontconfig/conf.d/49-replace-monospace.conf
@@ -10,7 +10,7 @@
       <string>Consolas</string>
     </test>
     <edit name="family" binding="same">
-      <string>Iosevka</string>
+      <string>monospace</string>
     </edit>
   </match>
   <match target="pattern">
@@ -18,7 +18,7 @@
       <string>Liberation Mono</string>
     </test>
     <edit name="family" binding="same">
-      <string>Iosevka</string>
+      <string>monospace</string>
     </edit>
   </match>
   <match target="pattern">
@@ -26,7 +26,7 @@
       <string>Nimbus Mono</string>
     </test>
     <edit name="family" binding="same">
-      <string>Iosevka</string>
+      <string>monospace</string>
     </edit>
   </match>
   <match target="pattern">
@@ -34,7 +34,7 @@
       <string>Inconsolata</string>
     </test>
     <edit name="family" binding="same">
-      <string>Iosevka</string>
+      <string>monospace</string>
     </edit>
   </match>
   <match target="pattern">
@@ -42,7 +42,7 @@
       <string>Courier</string>
     </test>
     <edit name="family" binding="same">
-      <string>Iosevka</string>
+      <string>monospace</string>
     </edit>
   </match>
   <match target="pattern">
@@ -50,7 +50,7 @@
       <string>courier</string>
     </test>
     <edit name="family" binding="same">
-      <string>Iosevka</string>
+      <string>monospace</string>
     </edit>
   </match>
   <match target="pattern">
@@ -58,7 +58,7 @@
       <string>Source Code Pro</string>
     </test>
     <edit name="family" binding="same">
-      <string>Iosevka</string>
+      <string>monospace</string>
     </edit>
   </match>
 </fontconfig>
